webgui/gvc3200/css/pageframe.css
/* ... */
div.jqi button:hover { background-color: #728A8C; }
.jqiwarning .jqi .jqibuttons { background-color: transparent; }
div.jqi .jqimessage .field { padding: 5px 0px 5px 0px; float:left;width:300px;line-height:25px; }
div.jqi .jqimessage .shortmsg { float:left;width:600px;font-size: 12px; }
div.jqi .jqimessage .field label { clear: left; display: block; float: left; width: 150px; }
div.jqi .jqimessage .field input { border: #777777 1px solid; width: 120px; }
DIV.jqi .jqimessage .field input.error { border: #ff0000 1px solid; width: 120px; }
/*---------------------------------------------------------------------------------------------------------------*/

.account_add{ width:200px; left:300px; }
.account_add div { width:100px; left:300px; }
.account_add div { width:100px; left:400px; }

.maindiv {border:0;height:100%;background:#FDFCFC;border:1px solid #cecece;overflow-y: hidden;overflow-x:hidden;position: relative;}
.formDiv{overflow-y:auto;overflow-x:hidden;width:100%;height:100%;}
#statusdiv { width:90%;text-align:center;margin-top:10px;height:20px;font-size:14px;}
.formtip {padding-left:40px;}
.errortip,.errorservertip { position:absolute; top:30px; font-size:12px; }
input[type='radio'] { width:15px !important; *width:15px !important;height: 15px !important; border:none;padding: 0; }
.inputradio { width:15px !important; *width:15px !important; height: 15px !important; border:0px; background-color: transparent; margin-top:8px;padding:0; }
.savediv{ width:250px; padding-top:40px;margin-left:385px !important;*margin-left:320px;text-align:center;margin-bottom:20px; }
.savebtn { margin-right:40px;border:none;background:#5089BA;*width:82px;}
/*.savediv{padding:0;margin:0 !important;position:absolute;left:0;width:100%;height:60px;bottom:0px;background:#cecece;}
.savebtn{clear:both;position:relative;margin:15px 0 0 0;bottom:0;right: 45px;float: right;background: none repeat scroll 0 0 #5ac0f0;height: 28px;width: 70px;border:none;}*/
.savebtn.buttonover{background:#186DB7;}
.cancelbtn{background:#777777;*width:82px;}
.cancelbtn.buttonover{background:#595959;}

/*---------------------------------------------------------------------------------------------------------------*/
em { vertical-align: center; font:normal,font-size:7px;}
em.error {color:red;  padding-left:0px; }
em.success { padding-left: 0px; }

/*---------------------------------------------------------------------------------------------------------------*/
#flowpanes { position:relative; overflow:hidden; clear:both;width:760px;height:450px;padding-left:20px; }
#flowpanes .items { width:20000em; position:absolute; clear:both; margin:0; padding:0;padding-left:10px; }
.tipbtn{ display:block;float:right;text-align:center;width:300px;margin-top:-10px}
.flowdiv{float:left;display:block;width:670px;cursor:pointer;color:#fff; margin:0px 20px 0 30px;}
.menuback { background:black;}

.wifiessiddiv{
    border:1px solid gray; width:170px !important; height:150px; overflow:auto;
}
.wifiessiddiv li{
    margin-left:-20px;cursor:pointer;list-style-type:none;
}
.wifiessiddiv li img{width:12px;height:14px;}
.wifiessiddiv li.noimg{padding-left:12px;}

/*********block_download_func*************/
.downfont{position: relative;top: 50px;color: #222;}
.blockMsg.blockPage{height:60px;box-shadow:0px 0px 10px 2px #919191;font-size: 14px;opacity: 1 !important;border-radius:0px !important;}
.blockMsg.blockPage img{position: relative;float: left;top: 0px;left:50%;margin-left: -20px;}

/*------------Caption-----------------*/
#captionContainer{width:719px;height:405px;border-radius:0px;border:1px solid #444444;box-shadow:0px 0px 10px 2px #919191;background:#232728;position:absolute;display:none;z-index:1000;top:50%;left:50%;margin-left:-370px;margin-top:-180px;}
#topCaption, #leftCaption, #bottomCaption{background:#ccc;text-align:center;}
#topCaption{width:100%;min-height:20px;}
#leftCaption{width:153px;margin:3px 0 3px 0;}
#bottomCaption{width:100%;min-height:20px;}
#fnblockContainer{height:auto;position:absolute;border:1px solid #c2c2c2;background:#ccc;display:none;}
#fnblockContainer *{float:left;}
#closecaption{position: absolute;right:-15px;top:-15px;border:0;background:url("../img/remote/close_unpressed.png") no-repeat;width:42px;height:42px;}
#closecaption:hover{background:url("../img/remote/close_pressed.png") no-repeat;}
#fnblockContainer button:hover{text-align:center;border-radius:0px;}
#capBold{width:18px;height:20px;background:transparent;color:#424242;text-align:center;font-size:15px;}
#capBold:hover{background:#989FAC;}
#capleftalign, #capcenteralign, #caprightalign{width:22px;height:20px;}
#capleftalign{background:url("../img/call/align_left.png") center center  no-repeat;}
#capcenteralign{background:url("../img/call/align_middle.png") center center no-repeat;}
#caprightalign{background:url("../img/call/align-right.png") center center no-repeat;}
#capleftalign:hover{background:url("../img/call/align_left.png") #989FAC center center no-repeat;}
#capcenteralign:hover{background:url("../img/call/align_middle.png") #989FAC center center no-repeat;}
#caprightalign:hover{background:url("../img/call/align-right.png") #989FAC center center no-repeat;}
#ftcolordiv, #bgcolordiv{width:28px;height:20px;color:#424242;background:url("../img/call/caption_triangle.png") 20px center no-repeat;}
#ftcolordiv:hover, #bgcolordiv:hover{background:url("../img/call/caption_triangle.png") #989FAC 20px center no-repeat;cursor:pointer;}
#ftcolordiv span{position:relative;left:-9.5px;float:none;font-size:15px;}
#capfontcolor{width:13px;height:2px;padding:0px;position:relative;top:8px;left:3px;}
#capbgcolor{width:12px;height:12px;border:1px solid #8E899C;padding:0;position:relative;left:3px;top:-3px;}
#fnblockContainer > *{margin:2px;}
#fnblockContainer button{border:0;border-radius: 0px;}
#captionContainer input[type="text"]{width:100%;height:100%;text-align:center;background:transparent;border:0;}

